fix(ui): make "remove voice" button more visible on hover

--- a/src/renderer/style/app-settings.css
+++ b/src/renderer/style/app-settings.css
@@ -144,6 +144,11 @@
             td.gender, td.set-default {
                 text-align: center;
             }
+            tr:hover td.remove {
+                button svg {
+                    stroke: var(--secondary-contrast);
+                }
+            }
         }
     }
     .tts-engines {
